
syntax = "proto3";

package proto.ksync;

import "google/protobuf/empty.proto";

service Radar {
  rpc GetBasePath(ContainerPath) returns (BasePath) {}
  rpc RestartMirror(google.protobuf.Empty) returns (Error) {}
  rpc Restart(ContainerPath) returns (Error) {}
  rpc GetVersionInfo(google.protobuf.Empty) returns (VersionInfo) {}
}

message ContainerPath {
  string container_id = 1;
}

message BasePath {
  string full = 1;
}

message Error {
  string msg = 1;
}

message VersionInfo {
  string Version = 1;
  string GoVersion = 2;
  string GitCommit = 3;
  string GitTag = 4;
  string BuildDate = 5;
}
